--- a/index.html
+++ b/index.html
@@ -499,24 +499,23 @@ divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte"  style="margin-left: auto;
-  margin-right: auto; width:100%";>
+  margin-right: auto; width:100%; color:white;">
 	<font >        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 <font> personnes dans le monde ont été déplacées pour cause de conflits ou de catastrophes climatiques 
 	(<a href="http://www.unhcr.org/576408cd7">UNHCR</a>). </font>
 	 </div>
+			</div>
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
 </script>
 
-</div>
 <script>
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();   
 });
 </script>
 
-	</section>
 	<div class="paraxify intermede-3" style="background-position: center center;">
 	</div>
 
