--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
  			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
- 	<h2> "Fact-checking" du débat du 20 mars 2017 </h2>
+ 	<h2> Débat du 20 mars 2017 </h2> <br>
+			<h2 style="font-style: italic;"> Fast-checking </h2>
 		
 					<header>
 					</header>
