--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
     <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #0f52ba solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right  left4" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
+	<div class="element2"> <p class="triangle-right  left4" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et probablement à peu près autant pour les
 
 illégaux.
 
@@ -304,7 +304,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croît que de 90 000 personnes par an. De plus, Marine Le Pen ne dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <b style="color:green;"> INFO </b> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <br> <b> INTOX </b> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
 </div>
 </div>
 
@@ -317,7 +317,7 @@ illégaux.
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;"><b> INTOX </b> En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre. La Syrie est d'ailleurs le premier pays d'origine des demandeurs d'asile en UE pour la même année.
 </div>
 </div>
 		
@@ -984,9 +984,9 @@ $(document).ready(function(){
 			<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 			<ul>
 			<li> <a href="https://campus-solidaire.strikingly.com"> Camp’us solidaire </a>: lancée par <b>Bastien Vallée (ENSAE 2018) </b> et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. </li>	<br>
-			<li><a href ="https://www.ideas-box.org/index.php/fr"> Ideas Box de Bibliothèques Sans Frontières </a>est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs... et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
+			<!-- <li><a href ="https://www.ideas-box.org/index.php/fr"> Ideas Box de Bibliothèques Sans Frontières </a>est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs... et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 				<b>Enguérand Acquérone (ENSAE 2018)</b> avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li>
-			<br>
+			<br> -->
 			<li><a href="https://www.ensae.org/global/gene/link.php?doc_id=1243&fg=1">Sebastião Salgado</a>  (ENSAE 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li><br>	
 			</ul>
 			</div>
@@ -1006,8 +1006,8 @@ $(document).ready(function(){
 								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
 								<li><a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a></li>								
 								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
-							<li> Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/">Sebastião Salgado</a> pour illustrer notre propos.</li>
+								<li> <a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/L-admission-au-sejour-Les-titres-de-sejour-statistiques">Ministère de l'Intérieur </a> </li>
+							<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a> </li>
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
