--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <b style="color:green;"> INFO </b> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <br> <b> INTOX </b> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <b style="color:green;"> INFO </b> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <b syle="color:red;"> INTOX </b> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
 </div>
 </div>
 
@@ -317,7 +317,7 @@ illégaux.
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;"><b> INTOX </b> En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre. La Syrie est d'ailleurs le premier pays d'origine des demandeurs d'asile en UE pour la même année.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;"><b style="color:red;" > INTOX </b> En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre. La Syrie est d'ailleurs le premier pays d'origine des demandeurs d'asile en UE pour la même année.
 </div>
 </div>
 		
@@ -335,11 +335,7 @@ illégaux.
 </div>
 
 <div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
-En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribution des titres de séjour ont eu la 
-	répartition suivante en 2016 :
-le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), raisons économiques (22 575),
-raisons humanitaires (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285),
-divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430).<br> 
+	<b style="color:green;"> INFO </b> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au motif du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
 </div>
 </div>
 	
