--- a/index.html
+++ b/index.html
@@ -352,10 +352,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde
-	migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus Français ou non. 
-	Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, 
-	soit une différence considérable avec le chiffre avancé par B. Hamon.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> <b style="color:green;"> INFO </b> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <b style="color:red;"> INTOX </b>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale le solde migratoire en France est en fait de 140 000, 
 </div>
 </div>
 	
