--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 		</div>
  			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
  	<h2> Débat du 20 mars 2017 </h2> <br>
-			<h2 style="font-style: italic;"> Fast-checking </h2>
+			<h2 style="font-style: italic;"> Fact-checking </h2>
 		
 					<header>
 					</header>
@@ -304,7 +304,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <b style="color:green;"> INFO </b> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <b syle="color:red;"> INTOX </b> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <span style="color:green;"> INFO </span> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <span style="color:red;"> INTOX </span> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
 </div>
 </div>
 
@@ -317,7 +317,7 @@ illégaux.
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;"><b style="color:red;" > INTOX </b> En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre. La Syrie est d'ailleurs le premier pays d'origine des demandeurs d'asile en UE pour la même année.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;"><span style="color:red;" > INTOX </span> En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre. La Syrie est d'ailleurs le premier pays d'origine des demandeurs d'asile en UE pour la même année.
 </div>
 </div>
 		
@@ -335,7 +335,7 @@ illégaux.
 </div>
 
 <div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
-	<b style="color:green;"> INFO </b> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au motif du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
+	<span style="color:green;"> INFO </span> En 2016, 227 550 titres de séjour ont été attribuées dont notamment environ 39% ont été délivrés au motif du regroupement familial, 31% à des étudiants et 10% pour raisons économiques.
 </div>
 </div>
 	
@@ -352,7 +352,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> <b style="color:green;"> INFO </b> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <b style="color:red;"> INTOX </b>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale le solde migratoire en France est en fait de 140 000, 
+<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> <span style="color:green;"> INFO </span> Le solde migratoire est estimé à 67000 personnes par l'INSEE en 2016. <span style="color:red;"> INTOX </span>  Si l'on parle des immigrés, qui étaient au coeur du débat, et non de la population totale, le solde migratoire en France est en fait de 140 000 personnes. 
 </div>
 </div>
 	
