--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
  			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
- 	<h2> Débat du 20 mars 2017 </h2> <br>
+			<a href=https://www.youtube.com/watch?v=KtNRZCEfMUI#t=42m19s> <h2> Débat du 20 mars 2017 </h2></a> <br>
 			<h2 style="font-style: italic;"> Fact-checking </h2>
 		
 					<header>
@@ -369,7 +369,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Certes !
 </div>
 </div>
 	</div>
