--- a/index.html
+++ b/index.html
@@ -1005,10 +1005,6 @@ $(document).ready(function(){
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
-							<h3>Pourquoi ce projet ? </h3>
-							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.</p>
-							<p> Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
-							<p> Nous souhaitons utiliser nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
 							<h3>Pour en savoir plus  </h3>
 							<p> Sur les limites du statut de réfugié : l'article de sociologie de 
 								Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
@@ -1020,7 +1016,9 @@ $(document).ready(function(){
 	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
-							<h3>Qui sommes-nous ?</h3> 	 
+							<h3>Qui sommes-nous ?</h3>
+							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics.
+							Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
 							<ul class="icons">
 								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li> <a href="mailto:alienor.anido@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Aliénor Anido <br>
