--- a/index.html
+++ b/index.html
@@ -993,14 +993,14 @@ $(document).ready(function(){
 					<div class="row">
 						<section class="4u 6u(medium) 12u$(small)">
 							<h3>Nos sources </h3>
-							<p>D'où viennent les chiffres présentés ? Nous tenons à préciser qu'il est par définition difficile de récolter des données sur les personnes déplacées, et qu'il est nécessaire de croiser plusieurs sources pour refléter au mieux la situation. Nous nous sommes efforcés à n'utiliser que des sources officielles :</p>
+							<p>Il est par définition difficile de récolter des données sur les personnes déplacées. Nous avons donc croisé plusieurs sources :</p>
 							<ul class="alt">
-								<li><a href="https://popstats.unhcr.org/en/overview">UNHCR</a></li>
-								<li><a href="http://www.therefugeeproject.org">The Refugee Project</a></li>
-								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
-								<li><a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a></li>								
-								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
-								<li> <a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/L-admission-au-sejour-Les-titres-de-sejour-statistiques">Ministère de l'Intérieur </a> </li>
+								<a href="https://popstats.unhcr.org/en/overview">UNHCR</a>
+								<a href="http://www.therefugeeproject.org">The Refugee Project</a>
+								<a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a>
+								<a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a>								
+								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a>
+								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/L-admission-au-sejour-Les-titres-de-sejour-statistiques">Ministère de l'Intérieur </a>
 							<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a> </li>
 							</ul>
 						</section>
