--- a/index.html
+++ b/index.html
@@ -995,25 +995,22 @@ $(document).ready(function(){
 							<h3>Nos sources </h3>
 							<p>Il est par définition difficile de récolter des données sur les personnes déplacées. Nous avons donc croisé plusieurs sources :</p>
 							<ul class="alt">
-								<a href="https://popstats.unhcr.org/en/overview">UNHCR</a> <br>
-								<a href="http://www.therefugeeproject.org">The Refugee Project</a> <br>
-								<a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a> <br>
-								<a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a> <br>						
-								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a> <br>
-								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/L-admission-au-sejour-Les-titres-de-sejour-statistiques">Ministère de l'Intérieur </a> <br>
+								<a href="https://popstats.unhcr.org/en/overview">UNHCR</a>
+								<a href="http://www.therefugeeproject.org">The Refugee Project</a>
+								<a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a>
+								<a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a>				
+								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a>
+								<a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/L-admission-au-sejour-Les-titres-de-sejour-statistiques">Ministère de l'Intérieur </a>
+								<a href="http://www.ined.fr/fichier/s_rubrique/26275/541.population.societes.2017.fevrier.fr.pdf"> INED </a>
 								<a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a>
 							</ul>
 							<ul class="tabular">
 																
 									<h3>Contact</h3>
-									<p> Si vous avez une remarque, n'hésitez pas à nous écrire :</p>								
-									<a href="mailto:lumieresurlesmigrations@gmail.com">lumieresurlesmigrations@gmail.com</a>							
+									<p> N'hésitez pas à nous écrire :							
+									<a href="mailto:lumieresurlesmigrations@gmail.com">lumieresurlesmigrations@gmail.com</a> </p>							
 							</ul>
-								<a href="http://www.ensae.fr/">
-							    <u1 style="text-align: right">
-							     <img src="images/ensae.png" width="200" height="120"/> 
-							    </u1>
-							</a>
+								
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
 							<h3>Pour en savoir plus  </h3>
@@ -1022,7 +1019,7 @@ $(document).ready(function(){
 	"When refugees stopped being migrants" (2013)</a>, montre que l'apparition d'un statut à part de réfugié empêche
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
 							<p>Sur la terminologie employée pour décrire les flux migratoires, la
-								production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. "Combien de migrants?" </p>
+								production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. <a href="https://drive.google.com/open?id=0B1Bvj2p8fyKoTXhvSERvaHFOZFU">"Combien de migrants?"</a> </p>
 							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="https://www.internal-displacement.org/globalreport2016/">
 	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
 						</section>
@@ -1041,6 +1038,11 @@ $(document).ready(function(){
 								<li> <a href="mailto:irene.hu@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Irène Hu <br>
 
 							</ul>
+							<a href="http://www.ensae.fr/">
+							    <u1 style="text-align: right">
+							     <img src="images/ensae.png" width="200" height="120"/> 
+							    </u1>
+							</a>
 						</section>
 					</div>
 					<ul class="copyright">
