--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
 							<font color="#24292E">
-							<p style="text-align: justify;text-justify: inter-word; color:#004953;" >Un <b style="font-weight:bold ; color:#0f52ba">réfugié </b> est une personne qui se trouve <b> hors du pays </b>
+							<p style="text-align: justify;text-justify: inter-word; color:#004953;" >Un <b style="font-weight:bold ; color:#0f52ba">réfugié </b> est une personne qui se trouve <b style="font-weight:bold"> hors du pays </b>
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
 								et qui “du fait de sa race, de sa religion, de sa nationalité, 
 								de son appartenance à un groupe social déterminé 
-								ou de ses opinions politiques <b> craint avec raison d’être persécutée </b> et 
+								ou de ses opinions politiques <b style="font-weight:bold"> craint avec raison d’être persécutée </b> et 
 								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
@@ -188,7 +188,7 @@
 							 <center> <i class="icon big rounded fa fa-question"></i> </center>
 					<font color="#24292E">	 
 						<p style="text-align: justify;text-justify: inter-word; color:#004953;">Un réfugié est un ancien <b style="font-weight:bold ;color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile 
-							ne sont pas reconnus réfugiés (en cas de refus, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a <b>pas le droit de travailler </b>, sauf si l’examen de sa demande dépasse une année. </p>
+							ne sont pas reconnus réfugiés (en cas de refus, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a <b style="font-weight:bold">pas le droit de travailler </b>, sauf si l’examen de sa demande dépasse une année. </p>
 						</font> </section>
 				<!--	
                         <section class="4u 12u$(small)" style ="text-justify: inter-word">
@@ -199,7 +199,7 @@
 -->
 						<section class="4u$ 12u$(small)" style ="text-justify: inter-word">
 						 <center> <i class="icon big rounded fa fa-child"></i> </center>
-						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="font-weight:bold ; color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la <b> protection de leur propre gouvernement </b>, constituant parfois lui-même la cause de leur fuite. </p>
+						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="font-weight:bold ; color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la <b style="font-weight:bold"> protection de leur propre gouvernement </b>, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
 				</div>		
@@ -216,12 +216,12 @@
 	<ul>
 		<li> La demande est rejetée. </li>
 		<li> Le statut de <b style="font-weight:bold ; color: #29AB87" > réfugié </b> est accordé. En France, les réfugiés
-			bénéficient d'une carte de résident valable <b > dix ans</b>. <br> </li> 
-		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un <b>risque réel </b> de subir une <b> atteinte grave </b>. 
-		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b>un an renouvelable</b>. </li>
+			bénéficient d'une carte de résident valable <b style="font-weight:bold"> dix ans</b>. <br> </li> 
+		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un <b style="font-weight:bold">risque réel </b> de subir une <b style="font-weight:bold"> atteinte grave </b>. 
+		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold">un an renouvelable</b>. </li>
 		
-		<li>Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'<b>atteinte grave </b> ou encore en cas 
-			de <b>maladie</b> mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. </li>
+		<li>Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'<b style="font-weight:bold">atteinte grave </b> ou encore en cas 
+			de <b style="font-weight:bold">maladie</b> mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. </li>
 	</ul>	
 		
 	<!--	Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
