--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 <div class="container">
 <div style="background-color:  transparent; border:5px solid white;border-radius: 25px;margin-bottom: 10px; padding: 8px 8px 8px 8px"> 
 	<h2 style="color:#004953"> Crise des migrants ou crise des réfugiés? </h2>
+	
+	<div class="roundedImage" > 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="fences.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+	</div>
+	
 <div style="color:#000000; text-align: justify;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur 
 	les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques
@@ -1020,7 +1025,7 @@ $(document).ready(function(){
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
 							<p>Sur la terminologie employée pour décrire les flux migratoires, la
 								production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. <a href="https://drive.google.com/open?id=0B1Bvj2p8fyKoTXhvSERvaHFOZFU">"Combien de migrants?"</a> </p>
-							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="https://www.internal-displacement.org/globalreport2016/">
+							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="http://www.internal-displacement.org/globalreport2016/">
 	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
