--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	</head>
 	<body class="landing">
 
+<img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="fences.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;display:none;"/>
+	
 		<!-- Header -->
 			<header id="header">			
 				<h1><a href="index.html"></a></h1>
@@ -106,11 +108,6 @@
 <div class="container">
 <div style="background-color:  transparent; border:5px solid white;border-radius: 25px;margin-bottom: 10px; padding: 8px 8px 8px 8px"> 
 	<h2 style="color:#004953"> Crise des migrants ou crise des réfugiés? </h2>
-	
-	<div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="fences.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
-	</div>
-	
 <div style="color:#000000; text-align: justify;">	
 	On a souvent parlé de "crise des migrants" pour décrire cet afflux de personnes fuyant la guerre en Syrie qui arrivent sur 
 	les côtes européennes. Mais, petit à petit, de plus en plus d'associations, de journalistes, d'hommes et de femmes politiques
