--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <span style="color:green;"> INFO </span> Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <span style="color:red;"> INTOX </span> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> <span style="color:green; margin:1px;"> INFO </span>   Depuis 2004, 200 000 étrangers entrent légalement en France chaque année. <span style="color:red;margin:2px;"> INTOX </span> Il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
 </div>
 </div>
 
