--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="3523">
 		<meta property="og:image:height" content="2372">
+		<meta property="og:title" content="La crise des réfugiés en Europe: des infographies pour comprendre" />
+		<meta property="og:description" content="Visualisation de données et infographies sur les migrations en Europe" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script> 
 		<!--<script src="https://code.jquery.com/jquery-1.11.0.js"></script>-->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
