--- a/index.html
+++ b/index.html
@@ -1042,11 +1042,13 @@ $(document).ready(function(){
 								<li> <a href="mailto:irene.hu@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Irène Hu <br>
 
 							</ul>
+							<center>
 							<a href="http://www.ensae.fr/">
 							    <u1 style="text-align: right">
 							     <img src="images/ensae.png" width="200" height="120"/> 
 							    </u1>
 							</a>
+							</center>
 						</section>
 					</div>
 					<ul class="copyright">
